fix fetchDay, add textoverflow

--- a/src/components/UserBar/UserBar.module.css
+++ b/src/components/UserBar/UserBar.module.css
@@ -21,6 +21,10 @@
     font-weight: 700;
     line-height: 1.29;
     letter-spacing: -0.01em;
+
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .userBarIcon {
@@ -58,4 +62,5 @@
     }
 }
 
-@media (min-width: 1440px) {}
+@media (min-width: 1440px) {
+}
